# graphdb

./: .gitignore  LICENSE  README.md  db-prototype.cabal  graphdb.cabal
app/: Main.hs
src/: Lib.hs
