name:                graphdb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bflyblue/graphdb#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun Sharples
maintainer:          shaun.sharples@gmail.com
copyright:           2017 Shaun Sharples
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hashable
                     , stm
                     , text
                     , unordered-containers
  default-language:    Haskell2010

executable graphdb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , graphdb
  default-language:    Haskell2010

test-suite graphdb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphdb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bflyblue/graphdb
